Since high-contrast mode doesn't display icons (since they are specified via CSS background-image), in the cases where the icon is *not* replaced by a character, hide the node.  Fixes #11087.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22073 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -159,7 +159,12 @@
 .dijit_a11y * {
 	background-image:none !important;
 }
-
+.dijit_a11y .dijitIcon {
+	/* dijitIcon is for user icons; since they don't display in high contrast mode,
+	 * hide the node, to avoid it using up space
+	 */
+	display: none;
+}
 .dijit_a11y .dijitCalendarIncrementControl {
 	display: none;	/* don't display icon */
 }
@@ -1810,11 +1815,11 @@ div.dijitTabDisabled, .dj_ie div.dijitTabDisabled {
 }
 
 
-/* Disable the high contrast character */
 .dijitToggleButtonIconChar {
+	/* character (instead of icon) to show that ToggleButton is checked */
 	display:none !important;
 }
-.dijit_a11y .dijitToggleButtonIconChar {
+.dijit_a11y .dijitToggleButton .dijitToggleButtonIconChar {
 	display:inline !important;
 	visibility:hidden;
 }
